crosshair fix (z-index)

--- a/style/style.css
+++ b/style/style.css
@@ -46,6 +46,7 @@ body {
   color: #fefefe;
   font-size: 20px;
   top: -30px;
+  z-index: -1;
 }
 
 .timer1 {
@@ -55,6 +56,7 @@ body {
   font-size: 20px;
   top: -30px;
   left: 900px;
+  z-index: -1;
 }
 
 .restart {
@@ -139,4 +141,5 @@ body {
   left: 0;
   color: #fefefe;
   font-size: 20px;
+  z-index: -1;
 }/*# sourceMappingURL=style.css.map */
